# m3lc

./: Cargo.toml  README.md
benches/: fibbit.rs
examples/: church.m3lc  div2.m3lc  equal.m3lc  fibbit-one-term.m3lc  fibbit.m3lc  fibrec.m3lc  gcd.m3lc  lazy.m3lc  less.m3lc  minus.m3lc  one.m3lc  power.m3lc  pred.m3lc  simple_recursion.m3lc  zero.m3lc
src/: cli.rs  data.rs  grammar.rs  lib.rs  m3lc.pest  main.rs  parse.rs  reduce.rs
src/data/: bool.rs  church.rs
vim/start/m3lc/ftdetect/: m3lc.vim
vim/start/m3lc/syntax/: m3lc.vim
