[package]
description = "ML-like Lambda Calculus Parser"
edition = "2021"
license = "MIT OR Apache-2.0"
name = "m3lc"
version = "0.1.0"

[dependencies]
colored = "*"
lazy_static = "*"
pest = "*"
pest_consume = "*"
structopt = "*"

[dev-dependencies]
criterion = "*"

[[bench]]
name = "fibbit"
harness = false
